--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.url = jdbc:postgresql://localhost:5433/product-api
-spring.datasource.username= postgres
-spring.datasource.password= root
+# Configurações do DataSource
+spring.datasource.url=jdbc:postgresql://localhost:5433/product-api
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+# Configurações do Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
 
